--- a/fungames/relnotes.html
+++ b/fungames/relnotes.html
@@ -6,39 +6,38 @@
 <link rel="stylesheet" type="text/css" href="main.css" media="all">
 </head>
 <h1 align="center">Main Server</h1>
-<a href="relnotes/2001.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2001.png" width="320" height="200" alt="2001"></a>
-<a href="relnotes/2002.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2002.png" width="320" height="200" alt="2002"></a>
-<a href="relnotes/2003.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2003.png" width="320" height="200" alt="2003"></a>
-<a href="relnotes/2004.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2004.png" width="320" height="200" alt="2004"></a>
-<a href="relnotes/2005.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2005.png" width="320" height="200" alt="2005"></a>
-<a href="relnotes/2006.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2006.png" width="320" height="200" alt="2006"></a>
-<a href="relnotes/2007.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2007.png" width="320" height="200" alt="2007"></a>
-<a href="relnotes/2008.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2008.png" width="320" height="200" alt="2008"></a>
-<a href="relnotes/2009.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2009.png" width="320" height="200" alt="2009"></a>
-<a href="relnotes/2010.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2010.png" width="320" height="200" alt="2010"></a>
-<a href="relnotes/2011.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2011.png" width="320" height="200" alt="2011"></a>
-<a href="relnotes/2012.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2012.png" width="320" height="200" alt="2012"></a>
-<a href="relnotes/2013.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2013.png" width="320" height="200" alt="2013"></a>
+<a href="relnotes/2001.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2001.png" alt="2001"></a>
+<a href="relnotes/2002.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2002.png" alt="2002"></a>
+<a href="relnotes/2003.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2003.png" alt="2003"></a>
+<a href="relnotes/2004.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2004.png" alt="2004"></a>
+<a href="relnotes/2005.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2005.png" alt="2005"></a>
+<a href="relnotes/2006.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2006.png" alt="2006"></a>
+<a href="relnotes/2007.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2007.png" alt="2007"></a>
+<a href="relnotes/2008.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2008.png" alt="2008"></a>
+<a href="relnotes/2009.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2009.png" alt="2009"></a>
+<a href="relnotes/2010.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2010.png" alt="2010"></a>
+<a href="relnotes/2011.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2011.png" alt="2011"></a>
+<a href="relnotes/2012.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2012.png" alt="2012"></a>
+<a href="relnotes/2013.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2013.png" alt="2013"></a>
 <h1 align="center">Test Server</h1>
-<a href="testrels/2003.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2003.png" width="320" height="200" alt="2003"></a>
-<a href="testrels/2004.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2004.png" width="320" height="200" alt="2004"></a>
-<a href="testrels/2005.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2005.png" width="320" height="200" alt="2005"></a>
-<a href="testrels/2006.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2006.png" width="320" height="200" alt="2006"></a>
-<a href="testrels/2007.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2007.png" width="320" height="200" alt="2007"></a>
-<a href="testrels/2008.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2008.png" width="320" height="200" alt="2008"></a>
-<a href="testrels/2009.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2009.png" width="320" height="200" alt="2009"></a>
-<a href="testrels/2010.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2010.png" width="320" height="200" alt="2010"></a>
-<a href="testrels/2011.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2011.png" width="320" height="200" alt="2011"></a>
-<a href="testrels/2012.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2012.png" width="320" height="200" alt="2012"></a>
+<a href="testrels/2003.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2003.png" alt="2003"></a>
+<a href="testrels/2004.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2004.png" alt="2004"></a>
+<a href="testrels/2005.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2005.png" alt="2005"></a>
+<a href="testrels/2006.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2006.png" alt="2006"></a>
+<a href="testrels/2007.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2007.png" alt="2007"></a>
+<a href="testrels/2008.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2008.png" alt="2008"></a>
+<a href="testrels/2009.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2009.png" alt="2009"></a>
+<a href="testrels/2010.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2010.png" alt="2010"></a>
+<a href="testrels/2011.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2011.png" alt="2011"></a>
+<a href="testrels/2012.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2012.png" alt="2012"></a>
 <h1 align="center">Toontown Rewritten</h1>
-<a href="relnotes/2013.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2013.png" width="320" height="200" alt="2013"></a>
-<a href="relnotes/2014.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2014.png" width="320" height="200" alt="2014"></a>
-<a href="relnotes/2015.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2015.png" width="320" height="200" alt="2015"></a>
-<a href="relnotes/2016.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2016.png" width="320" height="200" alt="2016"></a>
-<a href="relnotes/2017.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2017.png" width="320" height="200" alt="2017"></a>
-<a href="relnotes/2018.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2018.png" width="320" height="200" alt="2018"></a>
-<a href="relnotes/2019.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2019.png" width="320" height="200" alt="2019"></a>
-<a href="relnotes/2020.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2020.png" width="320" height="200" alt="2020"></a>
-<a href="relnotes/2021.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2021.png" width="320" height="200" alt="2021"></a>
-<h2 align="center">Credits</h2>
+<a href="relnotes/2013.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2013.png" alt="2013"></a>
+<a href="relnotes/2014.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2014.png" alt="2014"></a>
+<a href="relnotes/2015.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2015.png" alt="2015"></a>
+<a href="relnotes/2016.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2016.png" alt="2016"></a>
+<a href="relnotes/2017.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2017.png" alt="2017"></a>
+<a href="relnotes/2018.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2018.png" alt="2018"></a>
+<a href="relnotes/2019.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2019.png" alt="2019"></a>
+<a href="relnotes/2020.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2020.png" alt="2020"></a>
+<a href="relnotes/2021.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="relnotes/2021.png" alt="2021"></a>
 </html>
