--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
 <p></p>
 <a href="about.html" target="homeindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="about.png" alt="About"></a>
 <p></p>
-<a href="radiantnexus/index.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="radiantnexus.png" alt="RadiantNexus"></a>
+<a href="fungames/index.html" target="_top"><img style="display: block; margin-left: auto; margin-right: auto;" src="radiantnexus.png" alt="Childhood Games"></a>
 <p></p>
 <a href="japan.html" target="homeindex"><img style="display: block; margin-left: auto; margin-right: auto;" src="japan.png" alt="JP Sonic Sites"></a>
 <p></p>
