--- a/sonichq/games/index/s2beta/index.html
+++ b/sonichq/games/index/s2beta/index.html
@@ -29,7 +29,7 @@ Sonic The Hedgehog 2 - Beta Release
 <tr><td bgcolor=black width=1>&nbsp;</td><td width=100%><center>
 <br>
 
-<b><font face="Arial" size=-1><a href=https://web.archive.org/20011111000000/http://sonichq.org/main.htm>Sonic HQ</a> / <a href=../../>Gaming Info</a> / <a href=../>The Games List</a> / 
+<b><font face="Arial" size=-1><a href=/sonichq/main.htm>Sonic HQ</a> / <a href=../../>Gaming Info</a> / <a href=../>The Games List</a> / 
 Sonic 2 Beta - Genesis/Megadrive
 </font></H2>
 
@@ -143,7 +143,7 @@ view in one spot. ^_^</center></u></b></FONT></CENTER>
 <img src=/sonichq/images/screenshots/sonic2beta/stages.gif align=left>
 
 
-<p><p><embed autostart="true" loop="true" width=200 height=60 src=https://web.archive.org/20011111000000/http://www./sonichq/geocities/EnchantedForest/dell/7835/s2hiddenpalacek.mid><br>Hidden Palace Zone
+<p><p><embed autostart="true" loop="true" width=200 height=60 src=/sonichq/geocities/enchantedforest/dell/7835/s2hiddenpalacek.mid><br>Hidden Palace Zone
 
 <p>In the summer of 1992, anticipation was growing for the fall release of Sonic 2. Gaming magazines supplied a steady diet 
 of prototype screenshots to eager fans. When Sonic 2's Day finally arrived, gamers who had paid close attention to the 
@@ -193,7 +193,7 @@ Level Select And Debugging Mode
 are present in normal gameplay. This trick MUST be performed in order to access all the zones in the game. Simply hold whatever represents the 
 "A Button" for your emulator and press start.
 
-<p>To perform the debugging mode (a way to access areas normally closed off) you need to know how to use a <a href=https://web.archive.org/20011111000000/http://www.angelfire.com/sc/SonicTheHedge/images/HEX.ZIP>Hex Editor</a>. I cannot remember who 
+<p>To perform the debugging mode (a way to access areas normally closed off) you need to know how to use a <a href=https://web.archive.org/20011214000000/http://www.angelfire.com/sc/SonicTheHedge/images/HEX.ZIP>Hex Editor</a>. I cannot remember who 
 placed this editor up - but I think I have an idea. If you are that person, email me above so I can credit you correctly. Here are the instructions, it works, but do it at your own risk:
 
 <p><table border=0><tr><td><font face="Arial" size=-1>
