--- a/sonicstadium/topcities/fanart.html
+++ b/sonicstadium/topcities/fanart.html
@@ -1,13 +1,3 @@
-<script language='Javascript'>
-function WinOpen(src)
-{
-	OpenWin = window.open(src, '12B29DDC')
-	OpenWin.focus()
-}
-<!--
-	window.open('https://web.archive.org/20011101000000/http://64.152.192.118/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
-// -->
-</SCRIPT>
 <HTML>
  <HEAD>
   <!-- $MVD$:app("MicroVision WebExpress","770") -->
@@ -32,18 +22,33 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 -->
 </STYLE>
  </HEAD>
- <BODY background="bg.gif" bgproperties="fixed" TEXT="white" LINK="blue" VLINK="blue" ALINK="blue" LEFTMARGIN="0" TOPMARGIN="0" BOTTOMMARGIN="0">
+ <BODY background="bg.gif" bgproperties="fixed" TEXT="white" LINK="blue" VLINK="blue" ALINK="blue" LEFTMARGIN="0" TOPMARGIN="0" BOTTOMMARGIN="0"><!--
+	TOPCITIES MEMBER, IF THIS BANNER IS MESSING UP YOUR PAGE LAYOUT, VISIT 
+	https://web.archive.org/20011217000000/http://www.topcities.com/help/banner.html
+	FOR INSTRUCTIONS ON HOW TO FIX IT
+-->
+
+<CENTER>
+<IFRAME WIDTH=468 HEIGHT=60 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no BORDERCOLOR="#000000" SRC="https://web.archive.org/20011217000000/http://64.152.192.118/stuff_tc/index.htm"></iframe>
+<TABLE BORDER=0 CELLPADDING=0 CELLSPACING=0>
+	<TR>
+		
+      <TD> <A HREF="https://web.archive.org/20011217000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.thefreesite.com" TARGET="_top"> <IMG SRC="https://web.archive.org/20011217000000/http://64.152.192.118/stuff_tc/mb_thefreesite156x20.gif" WIDTH=156 HEIGHT=20 BORDER=0></A></TD>
+		
+      <TD> <A HREF="https://web.archive.org/20011217000000/http://www.topcities.com/cgi-bin/affiliates/clickcount.cgi?url=www.topcities.com/cgi-bin/home/signup" TARGET="_top"> 
+        <IMG SRC="https://web.archive.org/20011217000000/http://64.152.192.118/stuff_tc/mb_topcities312x20.gif" WIDTH=312 HEIGHT=20 BORDER=0 ALT="Get Your Free 150 MB Website Now!"></A></TD>
+	</TR>
+</TABLE>
+
+</CENTER>
+
 <CENTER>
   <DIV>
 
-<div align=center><!-- $MVD$:picsz("577","126") --><a href="main.html"><IMG SRC="titlelogo3.gif" alt="Click HERE to go back to the main page" align=center BORDER="0"></a>
 
-    </TABLE>
-
-
-       <table border=0 width="783" align=center><tr><td width=85%><div align=left>       
-<font size=2><b><a href="frame.html">MENU</a> >> Sonic Fan Club >> <font color=#00B700>The most exciting Fan Fair on the 'net!<br>
-&nbsp;&nbsp;&nbsp;&nbsp;<b>>><a href="sonfan.html"><b>Info Page</a> - <a href="sonfanews.html">SFCNews</a> - <a href="fangames.html">Fan Games Club</a> - <a href="fanart.html">Fan Art Club</a> - <a href="fanfic.html">Fan Fic Club</a> - <a href="fanhoax.html">Hoaxers Club</a> - <a href="fanreview.html">Sonic Shout</a><td width=15% VALIGN=TOP><div align=right><font size=2><b><a href="javascript:history.go(-1)
+       <table border=0 width="780" align=center><tr><td width=85%><div align=left>       
+<font size=2><b><a href="main.html">The Sonic Stadium</a> >> Sonic Fan Club >> <font color=#00B700>The most exciting Fan Fair on the 'net!<br>
+&nbsp;&nbsp;&nbsp;&nbsp;<b>>><a href="sonfan.html"><b>Info Page</a> - <a href="sonfanews.html">SFCNews</a> - <a href="fangames.html">Fan Games Club</a> - <a href="fanart.html">Fan Art Club</a> - <a href="fanfic.html">Fan Fic Club</a> - <a href="fanhoax.html">Hoaxers Club</a> - <a href="fanhacking.html">Hacking & Oddities</a><td width=15% VALIGN=TOP><div align=right><font size=2><b><a href="javascript:history.go(-1)
 ">Go Back a Page</a></table>
      </TR>
     </TABLE>
@@ -65,34 +70,30 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 
 
 
-<div align=center><B>This is the Sonic Fan Art Club, dedicated to those who feel that Sonic Art is the way. Or, if they just think their drawings are wicked and want to be publically known, send me some art via e-mail and I'll put your art up! Check out the list below.<p>
+<div align=center><B>This is the Sonic Fan Art Club, dedicated to those who feel that Sonic Art is the way. Or, if they just think their drawings are wicked and want to be publically known, send me some art via e-mail and I'll put your art up! Check out the list below.
 This is the gallery. When there are more pics recieved from artists I will create a database for them, but for now, here is everyone's Sonic pictures!<p>
 
-<p><hr width=90%>
-<font size=4 color=#00B700><b>News</font><br>
 
-<font size=2>Nothing much in the way of Fan Art, check out The Sonic Hoaxers Club, lots of stuff there, unless you'd rather check out the old art in here, in that case, be my guest.<p>
+<div align=center><font size=2><b>
+<font size=2 color=orange>Send in your Fan Art <a href=mailto:dreadknux@knuckles.co.uk>to Dreadknux!</a> Send me a sprite of yourself too, so I can make a button out of you!</font><p>
+
+<table border=0 bgcolor=black width=100%>
+<tr><td bgcolor=#0080FF><div align=center><font color=white size=2><b><div align=center>
+
+<font size=4 color=white><b>News
+<tr><td bgcolor=#00509F><div align=center><font color=white><b>
+<font size=2>Hey all! Final update of the year, before the new look, Frans De Rubens and Heavy Knux has submitted their fine Artwork into these archives. Be sure to send me your Fan Art in the New Year, gotta be reminded to put up Dark Hedgehog's... :)
+</table><p>
 
 
-<table border=0 width=90%>
-<tr><td><div align=center>
-<b><a href="hunter00xart.html"><font size=3>Hunter00x</a><br>
-<font size=2 color=#00B700>artwork submitted: 1</font>
-<tr><td><div align=center>
-<b><a href="pantaloonart.html"><font size=3>Pantyhose Man</a><br>
-<font size=2 color=#00B700>artwork submitted: 3</font>
-<tr><td><div align=center>
-<b><a href="dreadknuxart.html"><font size=3>'Webmaster' Dreadknuxster!</a><br>
-<font size=2 color=#00B700>artwork submitted: 20</font>
-</table>
-<p>
-
-<h4><font color=#ffc000><u>*Send in your Fan Art to Dreadknux!*<br>
-<a href=mailto:dreadknux@knuckles.co.uk>dreadknux@knuckles.co.uk</a><br>
-<a href="uniform.html">Fill in the form!</a></u></font></h4><B>
+<b><a href="hunter00xart.html"><font size=3>Hunter00x</a>&nbsp;|&nbsp;
+<b><a href="pantaloonart.html"><font size=3>Pantyhose Man</a>&nbsp;|&nbsp;
+<b><a href="dreadknuxart.html"><font size=3>Dreadknux</a>&nbsp;|&nbsp;
+<b><a href="pinkfairyart.html"><font size=3>Pink Fairy</a>&nbsp;|&nbsp;
+<b><a href="heavyknuxart.html"><font size=3>Heavy Knux</a>&nbsp;|&nbsp;
+<b><a href="fransderubensart.html"><font size=3>Frans de Rubens</a>
 
 <p>
 <div align=center><a href="main.html"><img src="Update/stadiumbottom.gif" border=0></a><p>
-
 </BODY>
 </HTML>
