--- a/sonichq/design/ezextras/posticons/index.html
+++ b/sonichq/design/ezextras/posticons/index.html
@@ -1,8 +1,9 @@
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
-   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-   <title>Unlimited Custom Posticons</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<title>Unlimited Custom Posticons</title>
+<LINK REL="SHORTCUT ICON" HREF="favicon.ico">
 <style type="text/css">
 <!-- a:hover {text-decoration: underline}
 A{text-decoration:none} -->
@@ -23,37 +24,17 @@ document.write('<link rel=stylesheet href=/sonichq/css/' + theme + '.css type="t
 <br>
 
 <center>
-<IFRAME SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&TARGET=_blank" HEIGHT="60" WIDTH="468" SCROLLING="NO"
-MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
-<SCRIPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?DC=ztnet-ron-top&JS=Y&TARGET=_blank">
-</SCRIPT>
-<NOSCRIPT>
-<A HREF="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-top" TARGET="_blank"><IMG SRC="https://web.archive.org/20011101000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-top&SC=Y" height="60" width="468"></A>
-</NOSCRIPT>
-</IFRAME>
-<!-- ---------- Advertising.com Banner Code -------------- --> 
-<!-- popup an Ad.com banner no more than once per hour on page entry --> 
+<a href="https://web.archive.org/20011217000000/http://www.aitsafe.com/go.htm?go=www.zophar.net%2Fstore%2Fitems.phtml%3Fn64-acc%23n64-adaptoid&afid=18480&tm=3&im=1" target="_top"><img src="https://web.archive.org/20011217000000/http://www.zophar.net/things/adap.gif" width="468" height="60" border=0 alt="N64 Adaptoid @ ZD Store"></a>
 <script language="JavaScript"> 
-<!-- 
-function setCookie(NameOfCookie, value, expirehours) { 
-var ExpireDate = new Date (); 
-ExpireDate.setTime(ExpireDate.getTime() + (expirehours * 3600 * 1000)); 
-document.cookie = NameOfCookie + "=" + escape(value) + 
-((expirehours == null) ? "" : "; expires=" + ExpireDate.toGMTString()) + 
-"; path=/;" ; 
+<!-- 12 hours 
+ 
+if (document.cookie.indexOf("whd_webhitsdirect") == -1) { 
+var expdate = new Date((new Date()).getTime() + 86400000); 
+document.cookie="whd_webhitsdirect=general; expires=" + expdate.toGMTString() + "; path=/sonichq/;"; 
+document.write("<script language=\"javascript\">whdAffiliate=79</script> <SCRIPT LANGUAGE=\"JavaScript\" src=\"https://web.archive.org/20011217000000/http://www.webhitsdirect.com/whd.js\"></script>"); 
 } 
-if (document.cookie.indexOf('AdComPop60917')==-1) 
-{ 
-setCookie('AdComPop60917','yes',1);
-var bnum=new Number(Math.floor(99999999 * Math.random())+1);
-document.write('<SCR'+'IPT LANGUAGE="JavaScript" '); 
-document.write(' SRC="https://web.archive.org/20011101000000/http://servedby.advertising.com/pops=1/site=60917/bnum='+bnum+'">'); 
-document.write('</SCR'); 
-document.write('IPT>'); 
-} 
-// --> 
-</script> 
-<!-- ---------- Copyright 2000, Advertising.com ---------- --></center>
+//--> 
+</script></center>
 
 <p><span class=pathlinks><table class=glow>
 </table></span>
@@ -85,7 +66,7 @@ document.write(titlepic + titlelogo)
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% class=maintable><tr>
 
 <td VALIGN=TOP WIDTH="70%" bgcolor=ffffff class=itemtable>
-<font face=Arial size=-1 color=black>
+<font face=Arial size=2 class=itemtable>
 
 <!sections>
 <div class=titlebar><table class=glow>
@@ -93,7 +74,7 @@ Get Posticon Script
 </table></div>
 
 <div class=itemtext>
-Be sure to enter all the information completely and use http:// on your URLs.<br><form action=index.php3>Enter URL of first (leftmost) posticon on your add topic/reply pages:<br><input type=text name=pic><br>Enter URL where you plan to put the .js file.  (Example: http://www.yourserver.com/yourpage/posticons.js)  This is a plain text file that you upload to your server.  Some servers, such as tripod, put javascript into the file  that messes it up.  One free host that is known to work with the file is homestead.com.<br><input type=text name=url><p>Optional Login & Custom Smilies features<br>To use these features, fill in these extra boxes.<p>Enter URL of your login page:<br><input type=text name=login><br>Enter URL of directory where you store your smilies:<br><input type=text name=smileydir><br>Enter URL of your smiley codes page:<br><input type=text name=smileypage><br><p>By clicking the button or loading the code page, you agree to the following:<br><textarea rows=10 cols=40>This Agreement (the "Agreement") governs your right to use this script.
+Be sure to enter all the information completely and use https://web.archive.org/20011217000000/http:// on your URLs.<br><form action=index.php3>Enter URL of first (leftmost) posticon on your add topic/reply pages:<br><input type=text name=pic><br>Enter URL where you plan to put the .js file.  (Example: https://web.archive.org/20011217000000/http://www.yourserver.com/yourpage/posticons.js)  This is a plain text file that you upload to your server.  Some servers, such as tripod, put javascript into the file  that messes it up.  One free host that is known to work with the file is homestead.com.<br><input type=text name=url><p>Optional Login & Custom Smilies features<br>To use these features, fill in these extra boxes.<p>Enter URL of your login page:<br><input type=text name=login><br>Enter URL of directory where you store your smilies:<br><input type=text name=smileydir><br>Enter URL of your smiley codes page:<br><input type=text name=smileypage><br><p>By clicking the button or loading the code page, you agree to the following:<br><textarea rows=10 cols=40>This Agreement (the "Agreement") governs your right to use this script.
 In order to use this script (or any part of it),
 you must agree to the following:
 
@@ -116,7 +97,15 @@ document.write('<center>MIDI: ' + caption + '<br><a href="#" onClick="MidiPlayer
 //-->
 </script>
 
-<center><u>Posting Tools</u></center><p>Welcome to the Posting Tools home page!  This 3rd-party script is designed to add additional posticons and other features to EZBoards.  It's written in javascript and requires no use of site permissions, just a file on your server and some code in your board header.  I may make a remotely-hosted version, which would require only a code in your banner and include automatic updates, if enough people ask for this feature.  Be sure to check back for updates and new features.  To comment on this script, post <a href=https://web.archive.org/20011101000000/http://pub12.ezboard.com/fsonichqcommunityfrm20>here</a>.  Please do not contact EZBoard about tech support for this script - ask any quesdtions on the appropriate HQ forum
+<center><u>Posting Tools</u></center><p>Welcome to the Posting Tools home page!  This 3rd-party script is designed to add additional posticons and other features to EZBoards.  It's written in javascript and requires no use of site permissions, just a file on your server and some code in your board header.  I may make a remotely-hosted version, which would require only a code in your board header and include automatic updates, if enough people ask for this feature.  Be sure to check back for updates and new features.  To comment on this script, post <a href=https://web.archive.org/20011217000000/http://pub12.ezboard.com/fsonichqcommunityfrm20>here</a>.  (You can also see the script (or at least one similar to it) running there.)  Note - this script is IE5+ only.  Please do not contact EZBoard about tech support for this script - ask any questions on the appropriate HQ forum.
+<p><center><IFRAME SRC="https://web.archive.org/20011217000000/http://ads1.ad-flow.com/?DC=ztnet-ron-rst&TARGET=_blank" HEIGHT="125" WIDTH="125" SCROLLING="NO" MARGINWIDTH="0" MARGINHEIGHT="0" FRAMEBORDER="0" VSPACE="0" HSPACE="0">
+<SCRIPT LANGUAGE="JavaScript">document.write('<SCR'+'IPT LANGUAGE="JavaScript" SRC="https://web.archive.org/20011217000000/http://ads1.ad-flow.com/?DC=ztnet-ron-rst&JS=Y&TARGET=_blank"></SCR'+'IPT>');</SCRIPT>
+<NOSCRIPT>
+<A HREF="https://web.archive.org/20011217000000/http://ads1.ad-flow.com/?SHT=ztnet-ron-rst" TARGET="_blank"><IMG SRC="https://web.archive.org/20011217000000/http://ads1.ad-flow.com/?SIT=ztnet-ron-rst" HEIGHT="125" WIDTH="125"></A>
+</NOSCRIPT>
+</IFRAME>
+</center>
+
 </font></td></tr>
 </table>
 <!end main table middle>
@@ -124,7 +113,7 @@ document.write('<center>MIDI: ' + caption + '<br><a href="#" onClick="MidiPlayer
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100% class=maintable><tr>
 <td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
-<td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2000 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
+<td width=99% bgcolor=000000><font color="white" size=-3 face="arial"><center>Page is ©1996-2001 Sonic HQ.  Sonic & Co. are © Sega.</center></font></td>
 <td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr></table>
 <!end main table bottom>
