so fucking close

--- a/japan/sonicr/index.html
+++ b/japan/sonicr/index.html
@@ -11,7 +11,7 @@ sonic r
 <table border="0">
 <tr>
 <td>
-　Title
+Title
 </td>
 <td>
 Sonic R
@@ -20,7 +20,7 @@ Sonic R
 
 <tr>
 <td>
-　Genre
+Genre
 </td>
 <td>
 Racing, Action
@@ -29,7 +29,7 @@ Racing, Action
 
 <tr>
 <td>
-　Platform
+Platform
 </td>
 <td>
 Sega Saturn and compatible devices
@@ -37,7 +37,7 @@ Sega Saturn and compatible devices
 
 <tr>
 <td>
-　Release date
+Release date
 </td>
 <td>
 December 4th, 1997 (JP)</td>
@@ -45,7 +45,7 @@ December 4th, 1997 (JP)</td>
 
 <tr>
 <td valign="top">
-　Supported peripherals
+Supported peripherals
 </td>
 <td valign="top">
 Control Pad<br>
@@ -60,13 +60,13 @@ Power Memory
 <a href="r/rstory.html" target="_top"><font size="2"><strong>&lt;&lt; Story&gt;&gt;</strong></font></a><br>
 <br>
 <table width="500"><td bgcolor="red" align="left"><font color="white">
-<b>　Game Features　</b></font>
+<b>Game Features</b></font>
 </td>
 </table>
 <br>
 <table width="500">
 <tr>
-      <td> ● <font color="red"><b><a href="r/rchara.html">An action-packed race featuring Sonic</a></b></font><b>and others!</b> 
+      <td><font color="red"><b><a href="r/rchara.html">An action-packed race featuring Sonic</a></b></font><b>and others!</b> 
       </td>
 </tr>
 <tr>
@@ -78,7 +78,7 @@ Furthermore, there are hidden characters that can be played as, adding depth to 
 </td>
 </tr>
 <tr>
-      <td> ● <font color="red"><b><a href="r/course.html">Course layout with many branching routes</a></b></font><b>, the exhilaration os running through the field freely</b> 
+      <td><font color="red"><b><a href="r/course.html">Course layout with many branching routes</a></b></font><b>, the exhilaration os running through the field freely</b> 
       </td>
 </tr>
 <tr>
@@ -89,7 +89,7 @@ In addition, the field has tricks and routes that take advantage of the characte
 </tr>
 
 <tr>
-      <td> ● <font color="red"><b><a href="r/screen.html">A variety of fricks and </a></b></font><b>plenty of fun on the course</b> 
+      <td><font color="red"><b><a href="r/screen.html">A variety of fricks and </a></b></font><b>plenty of fun on the course</b> 
       </td>
 </tr>
 
