--- a/japan/sonicr/r/course.html
+++ b/japan/sonicr/r/course.html
@@ -56,7 +56,7 @@ Resort Island
 Radical City</b><br>
 </font>
 <font size=+1><b>
-ラジカル シティ
+Radical City
 </b></font>
 <hr>
         <a href="image/course2.jpg"> <img border="0" src="../../sonicjam/gif/sankaku0.gif" width="16" height="16" align="top"> 
