--- a/sonichq/images/gallery.html
+++ b/sonichq/images/gallery.html
@@ -12,15 +12,15 @@
 
 <p><!-- main table top -->
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100%>
-<tr><td width=19><img src=../topleft.gif width=19></td>
+<tr><td width=19><img src=/sonichq/topleft.gif width=19></td>
 
 <td bgcolor=black width=100%><center><font size=+3 color=4B1FFC face=Verdana>Sonic HQ Gallery</font></center></td>
 
-<td width=19><img src=../topright.gif width=19></td></tr>
+<td width=19><img src=/sonichq/topright.gif width=19></td></tr>
 </table>
 
 <table BORDER=0 CELLSPACING=0 CELLPADDING=0 WIDTH=100% bgcolor=000000>
-<tr><td VALIGN=TOP height=49><center><img src=/sonichq/angelfire/images/bar1.gif></center></td></tr>
+<tr><td VALIGN=TOP height=49><center><img src=/sonichq/images/bar1.gif></center></td></tr>
 </table>
 <!-- end main table top -->
 
@@ -30,7 +30,9 @@
 
 <td VALIGN=TOP width=100% bgcolor=ffffff><center><font face=Verdana><blockquote>
 
-<br><font size=+2><a href=boxes>Box Art</a></font>
+<br>
+
+<font size=+2><a href=boxes>Box Art</a></font>
 <p align=left>Pictures of video game boxes, their original art (without logos and text over them), and CD case covers.
 <p><hr color=blue width=75%><br>
 
@@ -76,11 +78,11 @@
 
 <!main table bottom>
 <table border=0 cellspacing=0 cellpadding=0 width=100%>
-<tr><td bgcolor=000000>&nbsp<br>&nbsp</td><td rowspan=2 width=100% bgcolor=000000 valign=middle><center><br><a href=../><font color=4B1FFC><b>Back to Sonic HQ Main</b></font></a><br>&nbsp</center></td><td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
+<tr><td bgcolor=000000>&nbsp<br>&nbsp</td><td rowspan=2 width=100% bgcolor=000000 valign=middle><center><br><a href=/sonichq/main.htm><font color=4B1FFC><b>Back to Sonic HQ Main</b></font></a><br>&nbsp</center></td><td bgcolor=000000>&nbsp<br>&nbsp</td></tr>
 
 <tr valign=bottom>
-<td><img SRC="../bottomleft.gif" BORDER=0 height=20></td>
-<td><img SRC="../bottomright.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomleft.gif" BORDER=0 height=20></td>
+<td><img SRC="/sonichq/bottomright.gif" BORDER=0 height=20></td>
 </tr>
 </table>
 <!end main table bottom>
