Finish Sonic R translaion, add to japan.html

--- a/japan/sonicr/index.html
+++ b/japan/sonicr/index.html
@@ -32,7 +32,7 @@ Racing, Action
 Platform
 </td>
 <td>
-Sega Saturn and compatible devices
+Sega Saturn
 </tr>
 
 <tr>
@@ -40,7 +40,7 @@ Sega Saturn and compatible devices
 Release date
 </td>
 <td>
-December 4th, 1997 (JP)</td>
+November 11th, 1997 (EU) November 18th, 1997 (NA) December 7th, 1997 (JP)</td>
 </tr>
 
 <tr>
@@ -66,7 +66,7 @@ Power Memory
 <br>
 <table width="500">
 <tr>
-      <td><font color="red"><b><a href="r/rchara.html">An action-packed race featuring Sonic</a></b></font><b>and others!</b> 
+      <td><font color="red"><b><a href="r/rchara.html">An action-packed race featuring Sonic</a></b></font><b> and others!</b> 
       </td>
 </tr>
 <tr>
@@ -89,7 +89,7 @@ In addition, the field has tricks and routes that take advantage of the characte
 </tr>
 
 <tr>
-      <td><font color="red"><b><a href="r/screen.html">A variety of fricks and </a></b></font><b>plenty of fun on the course</b> 
+      <td><font color="red"><b><a href="r/screen.html">A variety of fricks</a></b></font><b> and plenty of fun on the course</b> 
       </td>
 </tr>
 
