--- a/japan/sonicr/r/course.html
+++ b/japan/sonicr/r/course.html
@@ -32,18 +32,18 @@ Resort Island
 </b></font>
 <hr>
         <a href="image/course1.jpg"> <img border="0" src="../../sonicjam/gif/sankaku0.gif" width="16" height="16" align="top"> 
-        <font size=2>I'll make it a little bigger.</font></a> </td>
+        <font size=2>Make it a little bigger!</font></a> </td>
 
 <td>
-歴代ソニックシリーズの最初のゾーン、自然いっぱいの南の島をモチーフにしたコースです。<br>
-澄み渡る青空と、水と緑に囲まれた風景が展開します。<br>
-スタートからゴールまでのオーバルコースになっていますが、道路になっているところを走るのはあくまで１つのコースにすぎません。<br>
-道路に縛られずに、崖の上を上っていくのも１つの道、水上を進むのも１つの道です。<br>
-海や池には小島が点在しているので、ソニックは２段ジャンプで渡ればショートカットも可能です。<br>
-もっとも空を飛べるマイルスやナックルズ、水上走行可能なエミーやエッグマンとのレースなので、最速を誇るソニックの足でも苦戦は必至？<br>
-また途中にはかつての港町があったり、森や高山、トンネルがあったりします。<br>
-それら隠された地形をうまく利用して、オリジナルのベストコースを見つけ出しましょう。<br>
-そして、コース最後にはソニックといえばおなじみ３６０度ループが待っています。
+This course is based on the first zone in most Sonic games, a southern island full of nature.<br>
+A clear blue sky and a landscape surrounded by water and greenery unfold.<br>
+It is an oval course for start to finish, but it is only one course that runs along what is a road.<br>
+You could go up the cliffs or go in the water without being bound by roads.<br>
+The ocean and ponds are dotted with small islands, so Sonic can take shortcuts by jumping across them.<br>
+With Tails and Knuckles, who can fly/glide, as well as Amy and Robotnik, who can float on water, it's inevitable that even Sonic's fastest legs will struggle.<br>
+There are also former port towns, forests, high mountains, and tunnels along the way.<br>
+Make good use of these hidden paths to find your best route.<br>
+At the end of the course, a traditional loop awaits you.
 </td>
 </tr>
 </table>
@@ -60,16 +60,16 @@ Radical City
 </b></font>
 <hr>
         <a href="image/course2.jpg"> <img border="0" src="../../sonicjam/gif/sankaku0.gif" width="16" height="16" align="top"> 
-        <font size=2>もうすこし大きくして見る</font></a> </td>
+        <font size=2>Make it a little bigger!</font></a> </td>
 
 <td>
-ネオンあふれる夜の都市を駆け抜けていくコースになっています。<br>
-ジェットコースターのように起伏の激しいコースを高速で走り抜けていきます。<br>
-ソニックやテイルスは、下り坂を『丸まって』駆け下りることでスピードアップが可能です。<br>
-スピードにのったままこの起伏を駆け抜けることがこのコース攻略のひとつのポイントになります。v
-コース途中には道路のとぎれた場所もあり、右の道路を進むか、左の道路を進むか、それともいったん落ちて地上を進むかなどレース中に進む方向はいくつもあります。<br> 
-一方、エミーやエッグマンは、その特技を活かして街中にある水路を走行することもでき、どのキャラクターを使ってどのコースを通るかはプレイヤー次第です。<br>
-コース後半には巨大なピンボールエリアなどが待ち受けており、ラスベガスのカジノを彷彿させる街中を走り抜けていきます。<br>
+The course will take you through the city at night, full of neon lights.<br>
+The course is like a roller coaster, with many ups and downs that you have to get through at high speed.<br>
+Sonic and Tails can increase their speed by curling up and running downhill.<br>
+One of the key points of this course is to run through it at speed.
+In the middle of the course, there are some roadblocks, and there are many directions you can go during the race, such as taking the right road, the left road, or dropping down and going on the ground.<br> 
+On the other hand, Amy and Robotnik can use their special skills to get through the waterways in the city, and it is up to the player to decide which character to use and which route to take.<br>
+In the second half of the course, a huge pinball area awaits you, and you will be going through the city reminiscent of a Las Vegas casino.<br>
 </td>
 </tr>
 </table>
@@ -82,22 +82,22 @@ Radical City
 Regal Ruin</b><br>
 </font>
 <font size=+1><b>
-リーガル　ルーイン
+Regal Ruin
 </b></font>
 <hr>
         <a href="image/course3.jpg"> <img border="0" src="../../sonicjam/gif/sankaku0.gif" width="16" height="16" align="top"> 
-        <font size=2>もうすこし大きくして見る</font></a> </td>
+        <font size=2>Make it a little bigger!</font></a> </td>
 
 <td>
-南海に浮かぶ遺跡を舞台にしたミステリアスなコースです。<br>
-かつての栄華がしのばれる、巨大で美しい古代の文明の中を走り抜けていきます。<br>
-スタート直後こそ開けた道ですが、直後にあるナックルズそっくりのスフィンクスを抜けるとそこはまるで迷路。<br>
-さらにジグザグな坂道を走り降りたり、階段を駆け上ったりと、高低差も激しいコースが待ち受けています。<br>
-それだけに走っているうちに、自分がどこを進んでいるのかわからなくなってしまうことも…<br>
-また、全コース中最も急カーブが多く、コーナーリングテクニックも必要です。<br>
-しかしそんなコースだからこそ、秘密の隠しルートを上手に進んでいけば、いきなりトップに躍り出ることも夢ではありません。<br>
-隠しルートの中には、唯一の３６０度ツインループもあります。<br>
-何度も挑戦したくなる、冒険者のためのコースです。<br>
+This mysterious course is set in the ruins of the South Sea.<br>
+You go through a huge, beautiful, ancient civilization that reminds you of its former glory.<br>
+Immediately after the start, the road is open, but once you pass the sphinx that looks just like Knuckles, it's like a maze.<br>
+In addition, there are zigzagging hills to run down, stairs to run up, and other routes with a lot of height differences.<br>
+As you run for it, you may lose trakc of where you're going.<br>
+It also has the morst sharp curves of all the courses, requiring good cornering techniques<br>
+However, because of this course, if you're good at following the hidden routes, you may suddenly reach the top.<br>
+Some of the hidden routes include the only traditional loop.<br>
+This is a course for adventurers who want to challenge themselves again and again.<br>
 </td>
 </tr>
 </table>
@@ -110,21 +110,21 @@ Regal Ruin</b><br>
 Reactive Factory</b><br>
 </font>
 <font size=+1><b>
-リアクティブ　ファクトリー
+Reactive Factory
 </b></font>
 <hr>
         <a href="image/course4.jpg"> <img border="0" src="../../sonicjam/gif/sankaku0.gif" width="16" height="16" align="top"> 
-        <font size=2>もうすこし大きくして見る</font></a> </td>
+        <font size=2>Make it a little bigger!</font></a> </td>
 
 <td>
-誰も知らない無人島を、Ｄｒ．エッグマンが秘密基地へと改造してしまいました。<br>
-そんな孤島の中の工場地帯を走り抜けます。<br>
-自然の面影は微塵もなく、高速道路のようなコースが幾重にもなって構成されています。<br>
-海上には潜水艦が浮上している場所があったり、リングがたくさん収納された秘密の小部屋など、エッグマンの基地には秘密がいっぱいです。<br>
-またコースには長いバンクやヘアピンカーブなどが次々と登場します。<br>
-このコースを走るときはバンクを利用したコーナリングが決め手。<br>
-また一見遠回りの道でも、秘密のルートを使って近道をしたりもできます。<br>
-だからトップを走っていると思っていても、気が付いたらランクがどんどん落ちていくなんていうことも。<br>
+Dr. Robotnik has converted a deserted island that no one knows about into a secret base.<br>
+You will go through the factory area in such an isolated island.<br>
+There is not the slightest trace of nature, and the course is made up of many layers, like a highway.<br>
+There is a submarine surfacing at sea, a secret small room where many rings are stored, and many other secrets in Robotnik's base.<br>
+The course also features a series of long banks and hairpin curves.<br>
+When going through this course, cornering using the banks is the key.<br>
+You can also use the secret routes to take shortcuts on seemingly roundabout paths.<br>
+So even if you think you're in first place, you may find that you'll rapidly drop places.<br>
 
 </td>
 </tr>
@@ -134,7 +134,7 @@ Reactive Factory</b><br>
 <table border="0" width="500" cellpadding ="8">
 <tr>
 <td align="left">
-そして、すべてのコースに勝利した者に、新たなコースが登場する……
+For those who beat all of the courses, one last course will be available...
 </td>
 </tr>
 <tr>
