--- a/japan/sonicr/r/screen.html
+++ b/japan/sonicr/r/screen.html
@@ -55,7 +55,7 @@ Radical City
 </center>
 <hr>
 <center>
-  Å@ <a href="../index.html">Return</a> 
+  <a href="../index.html">Return</a> 
 </center>
 </body>
 </html>
