--- a/sonicstadium/topcities/nonrelated.html
+++ b/sonicstadium/topcities/nonrelated.html
@@ -5,7 +5,7 @@ function WinOpen(src)
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011107000000/http://64.152.192.118/stuff_tc/popupbanner.html','6B8B4567','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011227000000/http://64.152.192.118/stuff_tc/popupbanner.html','6B8B4567','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT>
 <HTML>
@@ -63,12 +63,12 @@ But there are times when you just aren't in the mood for Sonic. One day you may 
 ... Besides, I do have more than just Sonic on the brain... ^_^
 <font face="comic sans ms" color=green><div align=center><h3><u>Other Cool Links!</u></font></h3></div>
 
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.yahoo.com" target=_blank><img src="Update/yahoo.gif" alt="Yahoo"></a>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.yahoo.com" target=_blank><img src="Update/yahoo.gif" alt="Yahoo"></a>
 <br>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.newgrounds.com" target=_blank><img src="Update/newgrounds.gif" alt="Newgrounds"></a><p>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.amused.com" target=_blank><font size=2 color=blue><b>Amused.com</a></font><p>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.stickdeath.com" target=_blank><font size=2 color=blue><b>Stick Death.com</a></font><p>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.stileproject.com/kungfu.html" target=_blank><font size=2 color=blue><b>http://www.stileproject.com/kungfu.html</a></font><br>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.newgrounds.com" target=_blank><img src="Update/newgrounds.gif" alt="Newgrounds"></a><p>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.amused.com" target=_blank><font size=2 color=blue><b>Amused.com</a></font><p>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.stickdeath.com" target=_blank><font size=2 color=blue><b>Stick Death.com</a></font><p>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.stileproject.com/kungfu.html" target=_blank><font size=2 color=blue><b>https://web.archive.org/20011227000000/http://www.stileproject.com/kungfu.html</a></font><br>
 <font color=black>This is a direct link to one of the funniest Flash movies I've seen in ages! Stick men in Kung Fu motion! Genius! Whatever you do, just don't go straight to www.stileproject.com - It's a porn site, but this page isn't. Quite weird, but you have been warned!
 
 <p>
