--- a/sonicstadium/com/main.html
+++ b/sonicstadium/com/main.html
@@ -17,7 +17,7 @@ We're sorry but you've reached a Microsoft IIS hosted web site that uses frames.
 frames-enabled browser in order to view the site. CBS.
 </center></body>
 </noframes>
-<frame name="thepage" src="https://web.archive.org/20011226000000/http://rstrip.namezero.com/navbar/seized.jsp?domain=sonic-stadium" marginwidth="0" marginheight="0"
+<frame name="thepage" src="https://web.archive.org/20011226000000/https://web.archive.org/20011227000000/http://rstrip.namezero.com/navbar/seized.jsp?domain=sonic-stadium" marginwidth="0" marginheight="0"
 frameborder="no" framespacing="0" border="0">
 
 </frameset>
