--- a/sonicstadium/topcities/movies.html
+++ b/sonicstadium/topcities/movies.html
@@ -1,11 +1,11 @@
 <script language='Javascript'>
 function WinOpen(src)
 {
-	OpenWin = window.open(src, '12B29DDC')
+	OpenWin = window.open(src, '6B8B4567')
 	OpenWin.focus()
 }
 <!--
-	window.open('https://web.archive.org/20011107000000/http://64.152.192.118/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+	window.open('https://web.archive.org/20011227000000/http://64.152.192.118/stuff_tc/popupbanner.html','6B8B4567','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
 // -->
 </SCRIPT>
 <HTML>
@@ -67,20 +67,20 @@ input {  font-family: Verdana; font-size: 8pt; color: black; text-decoration: no
 <font face="comic sans ms" color=green><div align=center><h3><u>Sonic Adventure Commercials</u></font></h3></div>
 
 <table border=0 width=60%>
-<tr><td><div align=center><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_sonic.mpg"><img src="Update/sonicmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_sonic.mpg"><font color=blue>Sonic Adventure-Sonic Commercial</a></font>
+<tr><td><div align=center><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_sonic.mpg"><img src="Update/sonicmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_sonic.mpg"><font color=blue>Sonic Adventure-Sonic Commercial</a></font>
 <td>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_tails.mpg"><img src="Update/tailsmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_tails.mpg"><font color=blue>Sonic Adventure-Tails Commercial</a></font>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_tails.mpg"><img src="Update/tailsmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_tails.mpg"><font color=blue>Sonic Adventure-Tails Commercial</a></font>
 <td>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_knuck.mpg"><img src="Update/knuxmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_knuck.mpg"><font color=blue>Sonic Adventure-Knuckles Commercial</a></font>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_knuck.mpg"><img src="Update/knuxmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_knuck.mpg"><font color=blue>Sonic Adventure-Knuckles Commercial</a></font>
 <td>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_amy.mpg"><img src="Update/amymovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_amy.mpg"><font color=blue>Sonic Adventure-Amy Commercial</a></font>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_amy.mpg"><img src="Update/amymovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_amy.mpg"><font color=blue>Sonic Adventure-Amy Commercial</a></font>
 </table>
 <table border=0 width=60%><tr><td>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_big.mpg"><img src="Update/bigmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_big.mpg"><font color=blue>Sonic Adventure-Big Commercial</a></font>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_big.mpg"><img src="Update/bigmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_big.mpg"><font color=blue>Sonic Adventure-Big Commercial</a></font>
 <td>
-<div align=center><a href="http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_e102.mpg"><img src="Update/gammamovie.gif"></a><br><font size=2><a href="http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_e102.mpg"><font color=blue>Sonic Adventure-E-102 Gamma Commercial</a></font>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_e102.mpg"><img src="Update/gammamovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_e102.mpg"><font color=blue>Sonic Adventure-E-102 Gamma Commercial</a></font>
 <td>
-<div align=center><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_egg.mpg"><img src="Update/eggmanmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011107000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_egg.mpg"><font color=blue>Sonic Adventure-Eggman Commercial</a></font>
+<div align=center><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_egg.mpg"><img src="Update/eggmanmovie.gif"></a><br><font size=2><a href="https://web.archive.org/20011227000000/http://www.sega.co.jp/sonicteam/sonicadv/dload/cf1_egg.mpg"><font color=blue>Sonic Adventure-Eggman Commercial</a></font>
 </table>
 
 <p>
