--- a/sonicstadium/topcities/fanreview.html
+++ b/sonicstadium/topcities/fanreview.html
@@ -1,3 +1,13 @@
+<script language='Javascript'>
+function WinOpen(src)
+{
+	OpenWin = window.open(src, '12B29DDC')
+	OpenWin.focus()
+}
+<!--
+	window.open('https://web.archive.org/20011228000000/http://64.152.192.118/stuff_tc/popupbanner.html','12B29DDC','toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=no,resizable=no,width=500,height=400');
+// -->
+</SCRIPT>
 <HTML>
  <HEAD>
   <!-- $MVD$:app("MicroVision WebExpress","770") -->
