--- a/japan/sonicadv/dload/advtheme.html
+++ b/japan/sonicadv/dload/advtheme.html
@@ -10,15 +10,15 @@ sonicadv-maintheme
 <tr><td align="center" bgcolor="#ff0000" height="50">
 <font size=3 face="ＤＦＰPOP体" color="#ffffff">
 <b>
-ソニック アドベンチャーのメインテーマ<br>
-「ＯＰＥＮ ＹＯＵＲ ＨＥＡＲＴ」歌詞を公開！
+Sonic Adventure Main Theme<br>
+Lyrics to Open Your Heart... revealed!
 </b>
 </font>
 </td></tr>
 <tr>
-      <td> <font size=3> <font size="2">１１月６日より好評発売中の音楽ＣＤ、「<a href="../info/cd_teambest.html" target="_self"><b>SONICTEAM 
-        "POWERPLAY" ～ Best Songs From SonicTeam</b></a>」はもう聴いてくれたかな？<br>
-        １２曲目にシークレットトラックとして入っているこの曲は、ご存じ<b>「ソニックアドベンチャー」のメインテーマ曲</b>なんだ。 今回はその歌詞を大公開！ちょっと難しいけど、歌ってね！！ 
+      <td> <font size=3> <font size="2">Have you listened to the music CD called <a href="../info/cd_teambest.html" target="_self"><b>SONICTEAM 
+        "POWERPLAY" Best Songs From SonicTeam</b></a> yet? It's been out since November 6!<br>
+        The secret track (12) is the main theme of <b>Sonic Adventure</b>. Now, we're revealing the lyrics! It's a little difficult to sing, but do your best! 
       </font> </font> </td>
     </tr>
 </table>
@@ -85,6 +85,6 @@ OPEN YOUR HEART, IT'S GONNA BE ALLRIGHT
 </td></tr>
 </table>
 </center>
-<div align="center"><a href="../index.html"><font size="2">&lt;&lt;戻る&gt;&gt;</font></a></div>
+<div align="center"><a href="../index.html"><font size="2">&lt;&lt;Return&gt;&gt;</font></a></div>
 </body>
 </html>
