--- a/japan/sonicadv/dload/mov1009.html
+++ b/japan/sonicadv/dload/mov1009.html
@@ -7,7 +7,7 @@
 <tr>
       <td bgcolor="red" align="center" colspan=2 height=60> <font size=4 face="ＤＦＰPOP体" color="white"><b> 
         <font size="3">The latest video from Sonic Adventure!<br>
-        [SonicAdventure - Movie DownLoad] </font></b></font></td>
+        [Sonic Adventure - Movie Download] </font></b></font></td>
     </tr>
 <tr>
 <td><img src="advmov1009.jpg" width="240" height="180" border=1></td>
@@ -35,11 +35,11 @@
             <td><font size="2">3 minutes 40 seconds</font></td>
           </tr>
           <tr> 
-            <td><font size="2">ファイルサイズ</font></td>
-            <td><font size="2">５.５MB</font></td>
+            <td><font size="2">File size</font></td>
+            <td><font size="2">5.5MB</font></td>
           </tr>
           <tr>
-            <td colspan=2 align="center" bgcolor="yellow" height="40"> <font size=4><a href="advmov1009.mpg"><b><font size="3">ムービーをダウンロード</font></b></a></font> 
+            <td colspan=2 align="center" bgcolor="yellow" height="40"> <font size=4><a href="advmov1009.mpg"><b><font size="3">Download the movie!</font></b></a></font> 
             </td>
           </tr>
         </table>
@@ -49,10 +49,10 @@
 <tr>
 <td colspan=2>
 <hr>
-        <font size="2">本家本元ソニックチームがお届けする、ソニックアドベンチャーの最新映像だよ！</font><font size=3>
-        <p><font size="2"> この映像は、１０月６日、新高輪プリンスで行われたソフトラインナップ発表会 「セガニューチャレンジカンファレンス２」で公開されたもの。<br>
-          つまり、流通・プレス・ソフトメーカーのみなさんが観たバージョンをそのままムービーにしたってワケだ！</font>
-        <p><font size="2"> ダウンロードに少し時間がかかるけど、ぜひ観てね！ </font> 
+        <font size="2">Here's the latest video from the Sonic Team!</font><font size=3>
+        <p><font size="2">This video was shown at the Sega New Challenge Conference 2, a software lineup presentation held at the New Takanawa Prince on October 6.<br>
+          In other words, the version that the distributors, press, and software developers saw was made into a movie!</font>
+        <p><font size="2">It's going to take a little while to download, but you should definitely watch it!</font> 
         </font></td></tr>
 
 <tr><td bgcolor="black" align="center" colspan=2 height="20">
